Logout api works, yay.
