# api/swagger-output.json
@@ -16,7 +16,7 @@
         "tags": [
           "Authentication"
         ],
-        "description": "Gets all   users.",
+        "description": "Allows an admin to register a new non-admin user.",
         "parameters": [
           {
             "name": "body",
@@ -64,7 +64,7 @@
         "tags": [
           "Authentication"
         ],
-        "description": "Gets all registered users.",
+        "description": "Allows a user to login.",
         "parameters": [
           {
             "name": "body",
@@ -103,7 +103,7 @@
         "tags": [
           "Tasks"
         ],
-        "description": "Gets all registered users.",
+        "description": "Gets all tasks in the database",
         "responses": {
           "200": {
             "description": "OK"
@@ -120,7 +120,7 @@
         "tags": [
           "Tasks"
         ],
-        "description": "Gets all registered users.",
+        "description": "Creates a new Task",
         "parameters": [
           {
             "name": "body",
@@ -166,7 +166,7 @@
         "tags": [
           "Tasks"
         ],
-        "description": "Gets all registered users.",
+        "description": "Updates a task given the task_id (this allows for on to also change the name of the task).",
         "parameters": [
           {
             "name": "body",
@@ -220,7 +220,7 @@
         "tags": [
           "Tasks"
         ],
-        "description": "Gets all registered users.",
+        "description": "Gets a single task using its name",
         "parameters": [
           {
             "name": "nome",
@@ -245,7 +245,7 @@
         "tags": [
           "Tasks"
         ],
-        "description": "Gets all registered users.",
+        "description": "Deletes a task given a name.",
         "parameters": [
           {
             "name": "nome",
@@ -285,11 +285,11 @@
           }
         }
       },
-      "delete": {
+      "post": {
         "tags": [
           "Users"
         ],
-        "description": "Gets all registered users.",
+        "description": "Gets a user by their session token.",
         "parameters": [
           {
             "name": "body",
@@ -297,10 +297,7 @@
             "schema": {
               "type": "object",
               "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "surname": {
+                "session_token": {
                   "example": "any"
                 }
               }
@@ -316,37 +313,9 @@
           },
           "403": {
             "description": "Forbidden"
-          }
-        }
-      },
-      "patch": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Gets all registered users.",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "username": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
           },
-          "400": {
-            "description": "Bad Request"
-          },
-          "403": {
-            "description": "Forbidden"
+          "404": {
+            "description": "Not Found"
           }
         }
       }
@@ -356,7 +325,7 @@
         "tags": [
           "Users"
         ],
-        "description": "Gets all registered users.",
+        "description": "Gets a user by their username and name.",
         "parameters": [
           {
             "name": "body",
@@ -372,33 +341,6 @@
                 }
               }
             }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "403": {
-            "description": "Forbidden"
-          }
-        }
-      }
-    },
-    "/users/{session_token}": {
-      "post": {
-        "tags": [
-          "Users"
-        ],
-        "description": "Gets all registered users.",
-        "parameters": [
-          {
-            "name": "session_token",
-            "in": "path",
-            "required": true,
-            "type": "string"
           }
         ],
         "responses": {
